# machine-learning

./: README.md  pyproject.toml
01-supervised-learning/: README.md
01-supervised-learning/classification/: notes.md
01-supervised-learning/linear-regression/: main.ipynb  notes.md
01-supervised-learning/logistic-regression/: notes.md
02-unsupervised-learning/: README.md  notes.md
02-unsupervised-learning/anomaly-detection/: notes.md
02-unsupervised-learning/clustering/: notes.md
02-unsupervised-learning/dimensionality-reduction/: notes.md
03-deep-dives/: README.md
03-deep-dives/gradient-descent/: notes.md
03-deep-dives/multiple-linear-regression/: notes.md
03-deep-dives/numerical-data/: notes.md
03-deep-dives/working-with-data/: README.md  generalization-overfitting.md  notes.md
Supervised Learning/01_Linear Regression/: main.py  model.py
Supervised Learning/02_Logistic Regression/: notes.md
Supervised Learning/03_Classificaton/: notes.md
Unsupervised Learning/: notes.md
advanced ml conceptss/: README.md  embeddings.md  intro-to-llms.md  neural-networks.md
real world ml/: README.md  automated-ml.md  fairness.md  production.md
