[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-ml-edu==0.1.3",
    "keras~=3.8.0",
    "numpy~=2.0.0",
    "plotly>=6.5.1",
    "tensorflow~=2.18.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
